--- a/src/research/light_sensor/Light system/Not Python/.cproject
+++ b/src/research/light_sensor/Light system/Not Python/.cproject
@@ -246,5 +246,7 @@
     </storageModule>
     	
     <storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
+    	
+    <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
     
 </cproject>
