Укорачиваем Солнечный датчик

--- a/src/research/lds_on_stm32f407/Debug/makefile
+++ b/src/research/lds_on_stm32f407/Debug/makefile
@@ -62,8 +62,8 @@ all: main-build
 main-build: lds_on_stm32f407.elf secondary-outputs
 
 # Tool invocations
-lds_on_stm32f407.elf: $(OBJS) $(USER_OBJS) /home/sereshotes/STM32CubeIDE/workspace_1.2.0/lds_on_stm32f407/STM32F407ZETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "lds_on_stm32f407.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/sereshotes/STM32CubeIDE/workspace_1.2.0/lds_on_stm32f407/STM32F407ZETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="lds_on_stm32f407.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
+lds_on_stm32f407.elf: $(OBJS) $(USER_OBJS) /home/sereshotes/CanSat/GitProject/can-cube-sat-2021/src/research/lds_on_stm32f407/STM32F407ZETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "lds_on_stm32f407.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/sereshotes/CanSat/GitProject/can-cube-sat-2021/src/research/lds_on_stm32f407/STM32F407ZETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="lds_on_stm32f407.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
