Перенес маджвик с солнечным датчиком в common

--- a/src/research/lds_on_stm32f407/.cproject
+++ b/src/research/lds_on_stm32f407/.cproject
@@ -98,6 +98,8 @@
                                     <listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
                                     									
                                     <listOptionValue builtIn="false" value="../App/Inc"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../Drivers/madgwick_lds/Inc"/>
                                     								
                                 </option>
                                 								
