--- a/src/board/SINS/.cproject
+++ b/src/board/SINS/.cproject
@@ -140,6 +140,8 @@
                                     <listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F4xx/Include"/>
                                     									
                                     <listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../Drivers/madgwick_lds/Inc"/>
                                     								
                                 </option>
                                 								
