Да здраствет передача земля - борт

--- a/src/board/BCS/CMakeLists.txt
+++ b/src/board/BCS/CMakeLists.txt
@@ -28,4 +28,5 @@ set(EXTRA_COMPONENT_DIRS "components/imi"
                          "ds18b20"
                          "sensors"
                          "log_collector"
-                         "operator")
+                         "operator"
+                         "components/operator2")
