--- a/src/board/BCS/components/operator2/CMakeLists.txt
+++ b/src/board/BCS/components/operator2/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "./Src/operator2.c"
                        INCLUDE_DIRS "./Inc"
-                       PRIV_REQUIRES mavlink_comp router its_config)
+                       PRIV_REQUIRES mavlink_comp router its_config log_collector)
