--- a/src/board/BCS/components/radio/CMakeLists.txt
+++ b/src/board/BCS/components/radio/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "./Src/send.c" "./sx126x/src/sx126x_drv.c" "./sx126x/src/sx126x_api.c" "./Src/sx126x_board.c"
                        INCLUDE_DIRS "./Inc" "./sx126x/inc"
-                       REQUIRES router its_config mavlink_comp)
+                       REQUIRES router its_config mavlink_comp log_collector)
