--- a/src/board/BCS/main/CMakeLists.txt
+++ b/src/board/BCS/main/CMakeLists.txt
@@ -2,7 +2,7 @@
 set(COMPONENT_REQUIRES )
 set(COMPONENT_PRIV_REQUIRES )
 
-set(COMPONENT_SRCS "main.c" "init_helper.c" "input_op.c")
+set(COMPONENT_SRCS "main.c" "init_helper.c" "input_op.c" "task_time_stats.c")
 set(COMPONENT_ADD_INCLUDEDIRS "./Inc")
 
 register_component()
