Управление питанием теперь работает

--- a/src/board/BCS/components/control_heat/CMakeLists.txt
+++ b/src/board/BCS/components/control_heat/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "./Src/control_heat.c"
                        INCLUDE_DIRS "./Inc"
                        REQUIRES shift_reg
-                       PRIV_REQUIRES router its_config mavlink_comp log_collector radio)
+                       PRIV_REQUIRES router its_config mavlink_comp log_collector radio msp)
