--- a/src/board/BCS/components/time_sync/CMakeLists.txt
+++ b/src/board/BCS/components/time_sync/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "./Src/time_sync.c" "./Src/ark_time_sync.c" "./Src/ntp_server.c"
+idf_component_register(SRCS "./Src/time_sync.c" "./Src/imi_time_sync.c" "./Src/ntp_server.c"
                        INCLUDE_DIRS "./Inc"
                        REQUIRES router its_config imi log_collector)
