--- a/src/board/SINS/.cproject
+++ b/src/board/SINS/.cproject
@@ -150,6 +150,8 @@
                                     <listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/SINS/Drivers/madgwick_lds}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../Drivers/SolTrack/Inc"/>
                                     								
                                 </option>
                                 								
@@ -265,11 +267,11 @@
                     					
                     <sourceEntries>
                         						
-                        <entry excluding="STM32F4xx_HAL_Driver/Src/Application" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
+                        <entry excluding="library/lsm6ds3_STdC/example|library/lis3mdl_STdC/example" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Application"/>
                         						
                         <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
                         						
-                        <entry excluding="library/lsm6ds3_STdC/example|library/lis3mdl_STdC/example" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Application"/>
+                        <entry excluding="SolTrack/examples|STM32F4xx_HAL_Driver/Src/Application" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
                         					
                     </sourceEntries>
                     				
@@ -532,5 +534,7 @@
         </configuration>
         	
     </storageModule>
+    	
+    <storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
     
 </cproject>
